2005-03-14  Tim Perdue <tim@gforge.org>

	* New "delete" function to permanently purge an entire project
	from the database and mailing lists and move cvs tree into a .deleted director
	* Ability to upload docs using the new FTP upload functionality

2005-03-11  Tim Perdue <tim@gforge.org>

	* fixed possible long-standing RBAC bug in Role.class so 
	all changes to roles result in updates to the db - removed the 
	optimization where it would only update if it thought something 
	had changed
	* cvs-cron/history_parse.php is working and tested
	* plugins/scmsvn/cronjobs/svn-stats.php is converted to PHP 
	and is UNTESTED
	* fixed scmcvs stats

2005-03-05  Guillaume Smet <guillaume-gforge@smet.org>

	* cvstracker plugin: lots of fixes and improvements. RPM packaging.
	* externalsearch plugin: RPM packaging
	* fixed localization in project stats
	* moved CVSWeb CSS from the plugin class to an external file

2005-03-04  Guillaume Smet <guillaume-gforge@smet.org>

	* fixed tracker soap stuff based on [#1090] Tracker wrapper for Soap
	by Steve Hawkins
	* fixed more typos in French translation
	* added ANALYZE in vacuum.php

2005-03-04  Thales <guillaume.smet@openwide.fr>

	* added plugin hooks for SSO with SiteMinder
	* improved the plugin generation shell script
	* fixed ldapextauth RPM packaging to follow new etc/ structure of the plugin

2005-03-03  Guillaume Smet <guillaume-gforge@smet.org>

	* commited work based on [#805] Runnable CVS history scripts by Hidenari Miwa

2005-03-03  Tim Perdue <tim@gforge.org>

	* modifying tracker/browse.php to support configurable columns 
	like pm/browse_tasks.php

2005-03-02  Guillaume Smet <guillaume-gforge@smet.org>

	* minor cosmetic fixes
	* fixed typos in French translation
	* applied [#1077] Minor patch for french translation by Alain Peyrat
	* fixed an history bug in project manager
	* fixed [#1081] Error message received when assigning tasks
	* fixed [#1078] Missing parameters in call to setup function for SOAP
	tracker call